--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             Providing donated bikes and accessories to refugees and asylum
             seekers in Scotland.
           </p>
-          <button>Donate a bike today</button>
-          <button>Volunteer</button>
+          <button class="btn1">Donate a bike today</button>
+          <button class="btn2">Volunteer</button>
         </div>
 
         <div>
           <h2 class="heading-underline">Learn more</h2>
 
-          <div>
-            <div class="article">
+          <div class="container">
+            <div class="article1">
               <h3 class="article__title">Why do refugees need bikes?</h3>
               <p class="article__summary">
                 Many refugees are placed in housing in areas where there are few
@@ -85,7 +85,7 @@
               </p>
             </div>
 
-            <div class="article">
+            <div class="article1">
               <h3 class="article__title">How can I help?</h3>
               <p class="article__summary">
                 We need lots of bikes and bike accessories! If you have an old
